--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,23 @@
+:root {
+  --disabled-opacity: 0.5;
+  --min-width: 375px;
+  --highlight-color: cornflowerblue;
+  --text-button-color: dodgerblue;
+  --text-button-hover-color: midnightblue;
+  --text-button-active-color: var(--highlight-color);
+  --annotation-hover-background-color: aliceblue;
+  --default-text-color: #2c3e50;
+  --app-background-color: gainsboro;
+  --enabled-canvas-color: white;
+  --disabled-canvas-color: darkgray;
+}
+
 * {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  color: #2c3e50;
+  color: var(--default-text-color);
 }
 
 #canvas {
@@ -15,12 +29,13 @@
   width: 100%;
   max-height: 100vmin;
   max-width: 100vmin;
-  background-color: white;
+  background-color: var(--enabled-canvas-color);
 }
 
 #canvas.disabled {
   pointer-events: none;
-  background-color: darkgray;
+  background-color: var(--disabled-canvas-color);
+  opacity: var(--disabled-opacity);
 }
 
 #unsupported-screen-size-section {
@@ -42,8 +57,8 @@ body {
   justify-content: center;
   margin: 0;
   max-height: 100vh;
-  min-width: 375px;
-  background-color: gainsboro;
+  min-width: var(--min-width);
+  background-color: var(--app-background-color);
 }
 
 #canvas-container {
@@ -164,12 +179,10 @@ h1 {
 
 .annotation:hover {
   cursor: text;
-  overflow: auto;
   white-space: unset;
-  outline: 1px cornflowerblue solid;
+  outline: 1px var(--highlight-color) solid;
   border-radius: 0.25rem;
-  background-color: aliceblue;
-  padding: 0.375rem;
+  background-color: var(--annotation-hover-background-color);
 }
 
 .primary-button {
@@ -177,22 +190,26 @@ h1 {
 }
 
 .primary-button:disabled {
-  opacity: 0.5;
+  opacity: var(--disabled-opacity);
 }
 
 .text-button {
   appearance: none;
   background: none;
   border: none;
-  color: dodgerblue;
+  color: var(--text-button-color);
+}
+
+.text-button:disabled {
+  opacity: var(--disabled-opacity);
 }
 
 .text-button:enabled:hover {
-  color: midnightblue;
+  color: var(--text-button-hover-color);
 }
 
 .text-button:enabled:active {
-  color: cornflowerblue;
+  color: var(--text-button-active-color);
 }
 
 /* NOTE: Hide actual file input because it seems impossible to restyle */
